--- a/styles.css
+++ b/styles.css
@@ -9,16 +9,13 @@ body{
 	background-color:#f5f5f5;
 /* 	border:5px solid black; */
 }
-testimonial{
+.testimonial{
 	margin:3% auto;
 	padding:20px;
 	background-color:white;
 	border:1px solid gray;
 	border-radius:2px;
 	display:block;
-}
-text{
-/* 	font-weight:bold; */
 }
 author{
 	display:block;
